Bug 537872 - Import Eudora mail code isn't 64-bit compatible; Patch by Ben Frisch, complete by Makoto Kato r=Standard8